// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openApiTsMetadataGenerator > should generate metadata for an operation 1`] = `
"/**
 * Operation details for TestApi
 */
export const OPERATION_DETAILS = {
  getTest: {
    path: '/test',
    method: 'GET',
  },
} as const;

/**
 * Type for all operation names as a string union
 */
export type Operations = keyof typeof OPERATION_DETAILS;
"
`;

exports[`openApiTsMetadataGenerator > should generate metadata for an operation with tags 1`] = `
"/**
 * Operation details for TestApi
 */
export const OPERATION_DETAILS = {
  createUser: {
    path: '/users',
    method: 'POST',
  },
  getStatus: {
    path: '/status',
    method: 'GET',
  },
  'items.list': {
    path: '/items',
    method: 'GET',
  },
  'users.list': {
    path: '/users',
    method: 'GET',
  },
} as const;

/**
 * Type for all operation names as a string union
 */
export type Operations = keyof typeof OPERATION_DETAILS;
"
`;
